Scanner info with built-ins working for Arduino.
Change-Id: Ifa3ea76c11324e06fb7f735f5eb435f387fbbedc